--- a/gallery/blender - donut/index.html
+++ b/gallery/blender - donut/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ghenciu Sebastian - Showcase Proiect</title>
+    <title> Ghenciu Sebastian - Showcase Proiect </title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/sports-car/preview.png')]">
+<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/donut/preview.png')]">
     <div class="gallery-showcase">
         <div class="button-bar mb-4 md:mb-8">
             <a href="/" class="button">
@@ -20,18 +20,21 @@
                 Back
             </a>
 
-            <a href="/gallery/sports-car/model.blend" class="button">
+            <a href="/gallery/donut/model.blend" class="button">
                 <img src="/media/icn-3d.svg" class="icon">
                 Download .blend
             </a>
         </div>
 
         <h1 class="text-2xl">
-            Low-poly Sports Car
+            Blender Donut Project
         </h1>
 
         <p>
-            singuru ferari pe care o sal vad la viata mea
+            If you have ever researched the free 3D software Blender, you’ve likely come across many renders of delicious-looking donuts.
+            This is because the most popular tutorial series for getting started with Blender is the free Donut Course by Blender Guru.
+            As a complete novice to Blender, I decided to give the course a try, and share what I learned.
+            Hopefully, this will give you some insight if you’re thinking about taking the course, too!
         </p>
     </div>
 </body>
