--- a/index.html
+++ b/index.html
@@ -15,29 +15,55 @@
 <body class="min-h-screen min-w-full text-white bg-gradient-to-b from-black to-[#011121]">
   <div class="min-h-screen px-2 md:px-24 lg:px-48 py-12 flex flex-col justify-between gap-3">
     <div class="group flex flex-wrap gap-3 items-center justify-center">
-      <a href="/gallery/donut/" class="gallery-item">
-        <img src="/gallery/donut/preview.png" />
+      
+      <a href="/gallery/blender - donut/" class="gallery-item">
+        <img src="/gallery/blender - donut/preview.png" />
       </a>
 
-      <a href="/gallery/sports-car/" class="gallery-item">
-        <img src="/gallery/sports-car/preview.png" />
+      <a href="/gallery/blender - car/" class="gallery-item">
+        <img src="/gallery/blender - car/preview.png" />
       </a>
 
-      <a href="/gallery/mushroom-bottle/" class="gallery-item">
-        <img src="/gallery/mushroom-bottle/preview.png" />
+      <a href="/gallery/blender - mushroom/" class="gallery-item">
+        <img src="/gallery/blender - mushroom/preview.png" />
       </a>
 
-      <a href="/gallery/autocad/" class="gallery-item">
-        <img src="/gallery/autocad/preview.png" />
+      <a href="/gallery/blender - plants/" class="gallery-item">
+        <img src="/gallery/blender - plants/preview.png" />
       </a>
 
-      <a href="/gallery/autocad/" class="gallery-item">
-        <img src="/gallery/autocad/preview2.png" />
+      <a href="/gallery/blender - glass/" class="gallery-item">
+        <img src="/gallery/blender - glass/preview.png" />
       </a>
 
-      <a href="/gallery/autocad/" class="gallery-item">
-        <img src="/gallery/autocad/preview3.png" />
+      <a href="/gallery/blender - caravana/" class="gallery-item">
+        <img src="/gallery/blender - caravana/preview.png" />
       </a>
+
+      <a href="/gallery/blender - campfire/" class="gallery-item">
+        <img src="/gallery/blender - campfire/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad - 1/" class="gallery-item">
+        <img src="/gallery/autocad - 1/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad - 2/" class="gallery-item">
+        <img src="/gallery/autocad - 2/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad - 3/" class="gallery-item">
+        <img src="/gallery/autocad - 3/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad - 4/" class="gallery-item">
+        <img src="/gallery/autocad - 4/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad - 5/" class="gallery-item">
+        <img src="/gallery/autocad - 5/preview.png" />
+      </a>
+
     </div>
 
     <a href="#contact-info" class="text-center">
@@ -62,13 +88,13 @@
       </h1>
 
       <span class="text-2xl text-gray-200 overflow-hidden max-h-8 text-carousel">
-        <h3>programmer</h3>
-        <h3>3d modeler</h3>
-        <h3>mcdonalds bitch</h3>
-        <h3>pularau</h3>
-        <h3>father of 3</h3>
-        <h3>proud homosexual</h3>
-        <h3>5 times corigent</h3>
+        <h3>Student</h3>
+        <h3>Programmer</h3>
+        <h3>3D Modeler</h3>
+        <h3>Graphic Designer</h3>
+        <h3>Skier</h3>
+        <h3>Volunteer</h3>
+        <h3>Engineer</h3>
       </span>
     </div>
 
@@ -77,15 +103,16 @@
 
     <div class="flex flex-col gap-10 items-center">
       <p class="max-w-prose text-center">
-        I am a McDonald's worker bitch from <img src="/media/icn-map.svg" class="icon"> <b>Brasov, Romania</b>.
-        Minima consectetur impedit accusantium hic animi sed, nemo dicta pariatur. Porro aperiam illum recusandae animi
-        deserunt harum quis libero, laudantium iure ad ipsum vero cupiditate magni hic corporis at voluptatibus debitis
-        voluptas. You can also download a PDF of my resume:
+        I am a highly competent IT professional with a proven track record in designing websites, networking and managing databases.
+        I have strong technical skills as well as excellent interpersonal skills, enabling me to interact with a wide range of clients.
+        I am eager to be challenged in order to grow and further improve my IT skills.
+        My greatest passion is in life is using my technical know-how to benefit other people and organisations.
+        You can also download a PDF of my resume:
       </p>
 
       <a href="/media/resume.pdf" class="button">
         <img src="/media/icn-document.svg" class="icon" />
-        Download My Resume
+        Download my resume
       </a>
 
       <p class="max-w-prose text-center">
@@ -102,6 +129,12 @@
           <img src="/media/icn-email.svg" class="icon" />
           sebyghenciu5@gmail.com
         </a>
+
+        <a href="mailto:sebi.ghenciu@gmail.com" class="button">
+          <img src="/media/icn-email.svg" class="icon" />
+          sebi.ghenciu@gmail.com
+        </a>
+
       </div>
     </div>
   </div>
