--- a/gallery/autocad - 2/index.html
+++ b/gallery/autocad - 2/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/donut/preview.png')]">
+<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad/preview.png')]">
     <div class="gallery-showcase">
         <div class="button-bar mb-4 md:mb-8">
             <a href="/" class="button">
@@ -20,18 +20,18 @@
                 Back
             </a>
 
-            <a href="/gallery/donut/model.blend" class="button">
+            <a href="/gallery/autocad/designs.zip" class="button">
                 <img src="/media/icn-3d.svg" class="icon">
-                Download .blend
+                Download CAD files
             </a>
         </div>
 
         <h1 class="text-2xl">
-            Blender Donut Project
+            Various AutoCAD Designs
         </h1>
 
         <p>
-            M-am cacat pe el donut ca mi-a iesit o pula :)
+            Some project for my university
         </p>
     </div>
 </body>
