--- a/gallery/blender - car/index.html
+++ b/gallery/blender - car/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad/preview.png')]">
+<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/mushroom-bottle/preview.png')]">
     <div class="gallery-showcase">
         <div class="button-bar mb-4 md:mb-8">
             <a href="/" class="button">
@@ -20,18 +20,18 @@
                 Back
             </a>
 
-            <a href="/gallery/autocad/designs.zip" class="button">
+            <a href="/gallery/mushroom-bottle/model.blend" class="button">
                 <img src="/media/icn-3d.svg" class="icon">
-                Download CAD files
+                Download .blend
             </a>
         </div>
 
         <h1 class="text-2xl">
-            Various AutoCAD Designs
+            Mushroom in a Bottle
         </h1>
 
         <p>
-            Tema la faculta LOL :DDDDDDDD
+            This is my 3rd project. Here I learned to use the shading and other stuff.
         </p>
     </div>
 </body>
