--- a/gallery/autocad5/index.html
+++ b/gallery/autocad5/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad1/preview.png')]">
+<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad5/preview.png')]">
     <div class="gallery-showcase">
         <div class="button-bar mb-4 md:mb-8">
             <a href="/" class="button">
@@ -20,18 +20,18 @@
                 Back
             </a>
 
-            <a href="/gallery/autocad1/designs.zip" class="button">
+            <a href="/gallery/autocad5/designs.zip" class="button">
                 <img src="/media/icn-3d.svg" class="icon">
                 Download .CAD files
             </a>
         </div>
 
         <h1 class="text-2xl">
-            One of the first project. I learned the basics of the Cad and learn how to make lines and scales.
+            I make a 2d piece, view from the top and I made it like a plan, so we can print it.
         </h1>
 
         <p>
-            Multifunctional key
+            Plan
         </p>
     </div>
 </body>
