just some updates

--- a/gallery/autocad3/index.html
+++ b/gallery/autocad3/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ghenciu Sebastian - Showcase Proiect</title>
+    <title>Ghenciu Sebastian - Cad Proiect</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad/preview.png')]">
+<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad3/preview.png')]">
     <div class="gallery-showcase">
         <div class="button-bar mb-4 md:mb-8">
             <a href="/" class="button">
@@ -20,18 +20,18 @@
                 Back
             </a>
 
-            <a href="/gallery/autocad/designs.zip" class="button">
+            <a href="/gallery/autocad3/designs.zip" class="button">
                 <img src="/media/icn-3d.svg" class="icon">
                 Download CAD files
             </a>
         </div>
 
         <h1 class="text-2xl">
-            Various AutoCAD Designs
+            I learned how to make a 2D tool and after that, in the next example we make it as a 3D.
         </h1>
 
         <p>
-            Some project for my university
+            Tools
         </p>
     </div>
 </body>
