--- a/gallery/autocad5/index.html
+++ b/gallery/autocad5/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ghenciu Sebastian - Showcase Proiect</title>
+    <title>Ghenciu Sebastian - Cad Proiect</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/sports-car/preview.png')]">
+<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad5/preview.png')]">
     <div class="gallery-showcase">
         <div class="button-bar mb-4 md:mb-8">
             <a href="/" class="button">
@@ -20,19 +20,18 @@
                 Back
             </a>
 
-            <a href="/gallery/sports-car/model.blend" class="button">
+            <a href="/gallery/autocad5/designs.zip" class="button">
                 <img src="/media/icn-3d.svg" class="icon">
-                Download .blend
+                Download .CAD files
             </a>
         </div>
 
         <h1 class="text-2xl">
-            Low-poly Sports Car
+            I make a 2d piece, view from the top and I made it like a plan, so we can print it.
         </h1>
 
         <p>
-            Here is the second project where I was asked by my friend who works as a programmer if I can make a low poly car in blender. The car is very nice as you can see 
-            and the light is very well positioned.
+            Plan
         </p>
     </div>
 </body>
