--- a/gallery/autocad1/index.html
+++ b/gallery/autocad1/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Ghenciu Sebastian - Showcase Proiect</title>
+    <title>Ghenciu Sebastian - Cad Proiect</title>
 
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad/preview.png')]">
+<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad1/preview.png')]">
     <div class="gallery-showcase">
         <div class="button-bar mb-4 md:mb-8">
             <a href="/" class="button">
@@ -20,18 +20,18 @@
                 Back
             </a>
 
-            <a href="/gallery/autocad/designs.zip" class="button">
+            <a href="/gallery/autocad1/designs.zip" class="button">
                 <img src="/media/icn-3d.svg" class="icon">
-                Download CAD files
+                Download .CAD files
             </a>
         </div>
 
         <h1 class="text-2xl">
-            Various AutoCAD Designs
+            One of the first project. I learned the basics of the Cad and learn how to make lines and scales.
         </h1>
 
         <p>
-            Some project for my university
+            Multifunctional key
         </p>
     </div>
 </body>
