--- a/gallery/blenderPlants/index.html
+++ b/gallery/blenderPlants/index.html
@@ -12,7 +12,7 @@
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
-<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/autocad/preview.png')]">
+<body class="min-h-screen min-w-full bg-center bg-cover bg-[url('/gallery/blenderPlants/preview.png')]">
     <div class="gallery-showcase">
         <div class="button-bar mb-4 md:mb-8">
             <a href="/" class="button">
@@ -20,18 +20,18 @@
                 Back
             </a>
 
-            <a href="/gallery/autocad/designs.zip" class="button">
+            <a href="/gallery/blenderPlants/model.blend" class="button">
                 <img src="/media/icn-3d.svg" class="icon">
-                Download CAD files
+                Download .blend file
             </a>
         </div>
 
         <h1 class="text-2xl">
-            Various AutoCAD Designs
+            Plants in a pot
         </h1>
 
         <p>
-            Some project for my university
+            Here I was playing with vertices trying to make a couple of plants, because my mother love plants
         </p>
     </div>
 </body>
