--- a/index.html
+++ b/index.html
@@ -15,10 +15,6 @@
 <body class="min-h-screen min-w-full text-white bg-gradient-to-b from-black to-[#011121]">
   <div class="min-h-screen px-2 md:px-24 lg:px-48 py-12 flex flex-col justify-between gap-3">
     <div class="group flex flex-wrap gap-3 items-center justify-center">
-      
-      <a href="/gallery/blender - donut/" class="gallery-item">
-        <img src="/gallery/blender - donut/preview.png" />
-      </a>
 
       <a href="/gallery/blender - car/" class="gallery-item">
         <img src="/gallery/blender - car/preview.png" />
@@ -28,8 +24,8 @@
         <img src="/gallery/blender - mushroom/preview.png" />
       </a>
 
-      <a href="/gallery/blender - plants/" class="gallery-item">
-        <img src="/gallery/blender - plants/preview.png" />
+      <a href="/gallery/blenderPlants/" class="gallery-item">
+        <img src="/gallery/blenderPlants/preview.png" />
       </a>
 
       <a href="/gallery/blender - glass/" class="gallery-item">
@@ -40,28 +36,32 @@
         <img src="/gallery/blender - caravana/preview.png" />
       </a>
 
+      <a href="/gallery/autocad1/" class="gallery-item">
+        <img src="/gallery/autocad1/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad2/" class="gallery-item">
+        <img src="/gallery/autocad2/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad3/" class="gallery-item">
+        <img src="/gallery/autocad3/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad4/" class="gallery-item">
+        <img src="/gallery/autocad4/preview.png" />
+      </a>
+
+      <a href="/gallery/autocad5/" class="gallery-item">
+        <img src="/gallery/autocad5/preview.png" />
+      </a>
+
+      <a href="/gallery/blender - donut/" class="gallery-item">
+        <img src="/gallery/blender - donut/preview.png" />
+      </a>
+
       <a href="/gallery/blender - campfire/" class="gallery-item">
         <img src="/gallery/blender - campfire/preview.png" />
-      </a>
-
-      <a href="/gallery/autocad - 1/" class="gallery-item">
-        <img src="/gallery/autocad - 1/preview.png" />
-      </a>
-
-      <a href="/gallery/autocad - 2/" class="gallery-item">
-        <img src="/gallery/autocad - 2/preview.png" />
-      </a>
-
-      <a href="/gallery/autocad - 3/" class="gallery-item">
-        <img src="/gallery/autocad - 3/preview.png" />
-      </a>
-
-      <a href="/gallery/autocad - 4/" class="gallery-item">
-        <img src="/gallery/autocad - 4/preview.png" />
-      </a>
-
-      <a href="/gallery/autocad - 5/" class="gallery-item">
-        <img src="/gallery/autocad - 5/preview.png" />
       </a>
 
     </div>
@@ -103,10 +103,12 @@
 
     <div class="flex flex-col gap-10 items-center">
       <p class="max-w-prose text-center">
-        I am a highly competent IT professional with a proven track record in designing websites, networking and managing databases.
+        I am a highly competent IT professional with a proven track record in 3D designing models, programming and managing databases.
         I have strong technical skills as well as excellent interpersonal skills, enabling me to interact with a wide range of clients.
         I am eager to be challenged in order to grow and further improve my IT skills.
-        My greatest passion is in life is using my technical know-how to benefit other people and organisations.
+
+        My greatest passions is in life is sking, singing at guitar, drawing, and stay creative .
+
         You can also download a PDF of my resume:
       </p>
 
