--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         I have strong technical skills as well as excellent interpersonal skills, enabling me to interact with a wide range of clients.
         I am eager to be challenged in order to grow and further improve my IT skills.
 
-        My greatest passions is in life is sking, singing at guitar, drawing, and stay creative .
+        My greatest passions are: skiing, playing the guitar, drawing and staying creative.
 
         You can also download a PDF of my resume:
       </p>
